Added Download as JPG

--- a/kb.html
+++ b/kb.html
@@ -184,6 +184,7 @@ Nav Bar / Header
     <ul class="dropdown-menu" role="menu">
       <li><a ng-click="downloadSvg()">Download SVG (Experimental)</a></li>
       <li><a ng-click="downloadPng()">Download PNG (Experimental)</a></li>
+      <li><a ng-click="downloadJpg()">Download JPG (Experimental)</a></li>
       <li class="divider"></li>
       <li><a ng-click="downloadJson()">Download JSON</a></li>
     </ul>
