--- a/kb.html
+++ b/kb.html
@@ -185,6 +185,7 @@ Nav Bar / Header
       <li><a ng-click="downloadSvg()">Download SVG (Experimental)</a></li>
       <li><a ng-click="downloadPng()">Download PNG (Experimental)</a></li>
       <li><a ng-click="downloadJpg()">Download JPG (Experimental)</a></li>
+      <li><a ng-click="downloadThumb()">Download Thumbnail (PNG) (Experimental)</a></li>
       <li class="divider"></li>
       <li><a ng-click="downloadJson()">Download JSON</a></li>
     </ul>
