Added initial Summary as first step to address #88

--- a/kb.html
+++ b/kb.html
@@ -259,6 +259,7 @@ Nav Bar / Header
     <li ng-class="{active:selTab==1}"><a ng-click="selTab=1" data-toggle="tab"><i class="fa fa-keyboard-o"></i> Keyboard Properties</a></li>
     <li ng-class="{active:selTab==3}"><a ng-click="selTab=3" data-toggle="tab"><i class="fa fa-file-text-o"></i> Custom Styles</a></li>
     <li ng-class="{active:selTab==2}"><a ng-click="selTab=2" data-toggle="tab"><i class="fa fa-code"></i> Raw data</a></li>
+    <li ng-class="{active:selTab==4}"><a ng-click="selTab=4" data-toggle="tab"><i class="fa fa-file-text-o"></i> Summary</a></li>
   </ul>
   <div id="tab-content" class='col-md-12 col-lg-12 row' ui-keydown="{esc:'focusKb()'}" ng-cloak>
 
@@ -820,6 +821,17 @@ Nav Bar / Header
     </alert>
   </div>
 
+   <!-- SUMMARY -->
+    <div id="summary" ng-class="{hidden:selTab!=4}">
+        <div class="col-md-12 col-lg-12 row">
+	      Title: {{meta.name}}<br>
+	      Author: {{meta.author}}<br>
+              Key sizes summary:<br>
+              <ul>
+	      <div ng-repeat="(k,v) in keyCount()"><li>{{k}} : {{v}}</li></div>
+	      </ul>
+	</div>
+    </div>
 </div>
 </div>
 
