Added switch counts to summary.

--- a/kb.html
+++ b/kb.html
@@ -831,6 +831,10 @@ Nav Bar / Header
               <ul>
 	      <div ng-repeat="(k,v) in keyCount()"><li>{{k}} : {{v}}</li></div>
 	      </ul>
+              Switches summary:<br>
+              <ul>
+	      <div ng-repeat="(k,v) in switchCount()"><li>{{k}} : {{v}}</li></div>
+	      </ul>
 	</div>
     </div>
 </div>
