--- a/kb.html
+++ b/kb.html
@@ -829,7 +829,7 @@ Nav Bar / Header
 	      Author: {{meta.author}}<br>
               Key sizes summary:<br>
               <ol>
-	      <li ng-repeat="(k,v) in keyCount()"><span class="fa fa-square"  ng-style="{'color':getTextColour(k)}"></span> {{k}} : {{v}}</li>
+	      <li ng-repeat="(k,v) in keyCount()"><span class="fa fa-square"  ng-style="{'color':getTextColor(k)}"></span> {{k}} : {{v}}</li>
 	      </ol>
               Switches summary:<br>
               <ol>
