--- a/kb.html
+++ b/kb.html
@@ -183,6 +183,7 @@ Nav Bar / Header
     <button type="button" class="btn btn-success dropdown-toggle" dropdown-toggle><i class="fa fa-download"></i> Download <span class="caret"></span></button>
     <ul class="dropdown-menu" role="menu">
       <li><a ng-click="downloadSvg()">Download SVG (Experimental)</a></li>
+      <li><a ng-click="downloadSvg2()">Download SVG2 (Experimental)</a></li>
       <li><a ng-click="downloadPng()">Download PNG (Experimental)</a></li>
       <li><a ng-click="downloadJpg()">Download JPG (Experimental)</a></li>
       <li><a ng-click="downloadThumb()">Download Thumbnail (PNG) (Experimental)</a></li>
@@ -827,14 +828,16 @@ Nav Bar / Header
         <div class="col-md-12 col-lg-12 row">
 	      Title: {{meta.name}}<br>
 	      Author: {{meta.author}}<br>
-              Key sizes summary:<br>
-              <ol>
-	      <li ng-repeat="(k,v) in keyCount()"><span class="fa fa-square"  ng-style="{'color':getTextColor(k)}"></span> {{k}} : {{v}}</li>
-	      </ol>
-              Switches summary:<br>
-              <ol>
-	      <li ng-repeat="(k,v) in switchCount()"> {{k}} : {{v}}</li>
-	      </ol>
+              <br>
+              <table class='summarytable'>
+              <tr><th  class='summarytable' colspan='3'>Key sizes summary</th></tr>
+	      <tr ng-repeat="(k,v) in keyCount()"  class='summarytable'><td> {{k}}</td><td> <span class="fa fa-square"  ng-style="{'color':getTextColor(k)}"> </td><td align='right'> {{v}}</td></tr>
+	      </table>
+	      <br>
+              <table class='summarytable'>
+              <tr><th colspan='2'>Switches summary</th></tr>
+	      <tr ng-repeat="(k,v) in switchCount()"><td> {{k}}</td><td> {{v}}</td></tr>
+	      </table>
 	</div>
     </div>
 </div>
