--- a/kb.html
+++ b/kb.html
@@ -806,9 +806,8 @@ Nav Bar / Header
     <!-- SUMMARY -->
     <div id="summary" ng-class="{hidden:selTab!=4}">
       <div class="col-md-12 col-lg-12 row">
-        Title: {{meta.name}}<br>
-        Author: {{meta.author}}<br>
-        <br>
+        <div>Title: {{meta.name}}</div>
+        <div>Author: {{meta.author}}</div>
         <table class='summarytable'>
           <tr><th class='summarytable' colspan='3'>Key sizes summary</th></tr>
           <tr ng-repeat="(k,v) in keyCount()" class='summarytable'>
@@ -817,10 +816,9 @@ Nav Bar / Header
             <td align='right'>{{v}}</td>
           </tr>
         </table>
-        <br>
         <table class='summarytable'>
-          <tr><th colspan='2'>Switches summary</th></tr>
-          <tr ng-repeat="(k,v) in switchCount()"><td>{{k}}</td><td>{{v}}</td></tr>
+          <tr><th colspan='3'>Switches summary</th></tr>
+          <tr ng-repeat="(k,v) in switchCount()"><td>{{k}}</td><td>{{switchNames[k]}}</td><td>{{v}}</td></tr>
         </table>
       </div>
     </div>
