--- a/kb.html
+++ b/kb.html
@@ -106,6 +106,8 @@ Nav Bar / Header
     <ul class="nav navbar-nav navbar-right" style="">
       <!-- Options button -->
       <li><a href="#" ng-click="showOptions()"><i class="fa fa-cog"></i> Options</a></li>
+      <!-- Tools button -->
+      <li><a href="#" ng-click="showTools()"><i class="fa fa-wrench"></i> Tools</a></li>
       <!-- Permalink button -->
       <li><a ng-href="{{getPermalink()}}" target="_blank" ng-click="dirty = false"><i class="fa fa-link"></i> Permalink</a></li>
       <!-- User button -->
@@ -999,6 +1001,47 @@ Options Dialog
   <div class="modal-footer">
     <button type="button" class="btn btn-danger" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="ok()">OK</button>
+  </div>
+</script>
+
+<!--***********************************************
+Tools Dialog
+************************************************-->
+<script type="text/ng-template" id="toolsDialog.html">
+  <div class="modal-header">
+    <button type="button" class="close" ng-click="cancel()">&times;</button>
+    <h4 class="modal-title">Tools</h4>
+  </div>
+  <div class="modal-body">
+    <h5>Remove or Move Legends:</h5>
+       <div class="form-group form-group-sm form-horizontal">
+       <label class="control-label text-nowrap" style='margin-left: 5px;'>Remove Legends:</label>
+           <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success hint--top hint--rounded" data-hint="Remove all the legends from all the keys. Does not remove decals." ng-click="removeLegends('all')"> All</button>
+            </div>
+            <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Remove the legends from all the Alphabetical keys." ng-click="removeLegends('alphas')"> Alphas</button>
+	    </div>
+            <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Remove the legends from all the Number keys." ng-click="removeLegends('nums')"> Nums</button>
+            </div>
+            <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Remove the legends from all the Punctuation keys." ng-click="removeLegends('punct')"> Punct</button>
+            </div>
+            <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Remove the legends from all the Function keys." ng-click="removeLegends('fn')"> Fn</button>
+            </div>
+            <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Remove the legends from all the other keys except decals." ng-click="removeLegends('others')"> Others</button>
+            </div>
+            <div class="btn-group btn-group-xs" role="group">
+		<button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Remove the legends from all the Decals." ng-click="removeLegends('decals')"> Decals</button>
+            </div>
+  
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" ng-click="cancel()">Cancel</button>
   </div>
 </script>
 
