Fixed tooltip written in early hours of morning.

--- a/kb.html
+++ b/kb.html
@@ -1100,7 +1100,7 @@ Tools Dialog
 	    </td>
 	    <td>
            <label for='totable'>To</label>
-           <table class="keytable" id='totable'>
+           <table class="keytable" id="totable">
              <tr>
                <td><input type='radio' name='toId' value='0'></td>
                <td><input type='radio' name='toId' value='1'></td>
@@ -1126,7 +1126,7 @@ Tools Dialog
 	     </table> 
 	    </td>
 	    <td>
-	     <button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="I want to move it move it." ng-click="moveSingleLegends()"> Go</button>
+	     <button type="button" class="btn btn-success  hint--top hint--rounded" data-hint="Move the legends in the From spot to the To spot." ng-click="moveSingleLegends()"> Go</button>
 	    </td>
 	    </tr>
 	    </table>
